--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 
 # dependencies
 node_modules
-/.pnp
+.pnp
 .pnp.js
 .yarn/install-state.gz
 
 # testing
-/coverage
-/.nyc_output
+coverage
+.nyc_output
 
 # next.js
 .next
@@ -42,7 +42,7 @@ yarn-error.log*
 lerna-debug.log*
 
 # IDEs and editors
-/.idea
+.idea
 .project
 .classpath
 .c9/
@@ -59,7 +59,10 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.*
+.env.local
+.env.test
+.env.development
+.env.production
 
 # temp directory
 .temp
